update title version

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="A rescue from the place where Nobody Care U" />
 		<!-- Open Graph protocol -->
-		<meta property="og:title" content="NCU Course Finder"/>
+		<meta property="og:title" content="NCU Course Finder v4"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="http://ncucf.herokuapp.com/"/>
+		<meta property="og:url" content="https://ncucf-v4.zetaraku.dev/"/>
 		<link rel="apple-touch-icon" href="logo192.png" />
 		<!--
 			manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
 			It will be replaced with the URL of the `public` folder during the build.
 			Only files inside the `public` folder can be referenced from the HTML.
 		-->
-		<title>NCU Course Finder</title>
+		<title>NCU Course Finder v4</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
